--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,12 +22,20 @@
 
     <!-- Spread css files to all child of layout.html-->
     <link rel="stylesheet" type="text/css" href="static/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="static/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="static/aster-theme.css">
+    <link rel="stylesheet" type="text/css" href="static/aster-navbar.css">
+
+    <!-- Download fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 
     <!-- Load JS scripts -->
     <script src="static/includes/bootstrap.min.js"></script>
 
   </head>
-    
+  
+  {% include 'navbar.html' %}
   {% block body %}{% endblock %}
 
 </html>
