--- a/static/aster-navbar.css
+++ b/static/aster-navbar.css
@@ -17,8 +17,9 @@
 
 .top-navbar .social-links a {
     height: 100%;
+    padding-top: 0px;
     color: white;
-    margin: 20px;
+    margin: 0px 0px 0px 20px;
     -webkit-transition: all 0.3s;
     transition: all 0.3s;
     z-index: 2;
@@ -34,6 +35,10 @@
     position: absolute;
     top: 0;
     max-width: 100%;
+}
+
+.top-wrapper title {
+    color: white;
 }
 
 .top-wrapper label {
