Menu modification and second section drafting

--- a/templates/home.html
+++ b/templates/home.html
@@ -32,6 +32,41 @@
 
     <section class="row home-bg-2" id="story">
 
+        <div class="tagline">
+            <span>
+                Tech for Good and Open-Source, listen to our Story
+            </span>
+        </div>
+
+        <div class="container">
+
+            <div class="col-5 video-wrapper">
+                <iframe src="https://www.youtube.com/embed/_SBBrj9y26M" frameborder="0" allowfullscreen></iframe>
+            </div>
+
+            <div class="col-5 description">
+                <text>
+                    The project established robust foundations as it got selected as finalist of the 2019 Call for Code initiative.
+                </text>
+            </div> 
+
+        </div>  
+
+        <div class="container">
+
+            <div class="col-5 description">
+                <text>
+                    The project established robust foundations as it got selected as finalist of the 2019 Call for Code initiative.
+                </text>
+            </div> 
+
+            <div class="col-5 video-wrapper">
+                <iframe src="https://www.youtube.com/embed/fLeLd2vp-8g" frameborder="0" allowfullscreen></iframe>
+            </div>
+
+        </div>
+
+
     </section>
 
 </body>
