--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,6 +2,7 @@
 
     <!-- Social media redirection -->
     <div class="social-links">
+        <a class="navbar-brand" href="/"><img src="static/images/logo-aster.png" width="30" height="30" class="d-inline-block align-center" alt="Logo Aster"> AsTeR</a>
         <a href="https://twitter.com/DindinMeryll"><i class="fa fa-twitter"></i></a>
         <a href="https://www.facebook.com/meryll.dindin"><i class="fa fa-facebook"></i></a>
         <a href="https://www.linkedin.com/in/dindin-meryll"><i class="fa fa-linkedin"></i></a>
@@ -18,11 +19,11 @@
 
         <nav class="menu">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Press</a></li>
-                <li><a href="#">Contribute</a></li>
-                <li><a href="#">Team</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/team">Team</a></li>
+                <li><a href="/press">Press</a></li>
+                <li><a href="/contribute">Contribute</a></li>
+                <li><a href="/pricing">Pricing</a></li>
             </ul>
         </nav>
 
