Update general template layouts

--- a/templates/home.html
+++ b/templates/home.html
@@ -23,16 +23,26 @@
         </div>
 
         <div class="scroll">
-            <a href="#story">
+            <a href="#features">
                 <span></span><span></span><span></span>
             </a>
         </div>
 
     </section>
 
-    <section class="row home-bg-2" id="story">
+    <section class="row home-bg-2" id="features">
 
-        <div class="tagline">
+        <div class="tagline offset">
+            <span>
+                Using State-of-the-Art Technology to Tackle real Issues when a Natural Disaster Occurs
+            </span>
+        </div>
+
+    </section>
+
+    <section class="row home-bg-3" id="story">
+
+        <div class="tagline offset">
             <span>
                 Tech for Good and Open-Source, listen to our Story
             </span>
@@ -46,7 +56,7 @@
 
             <div class="col-5 description">
                 <text>
-                    The project established robust foundations as it got selected as finalist of the 2019 Call for Code initiative.
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
                 </text>
             </div> 
 
@@ -56,7 +66,7 @@
 
             <div class="col-5 description">
                 <text>
-                    The project established robust foundations as it got selected as finalist of the 2019 Call for Code initiative.
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
                 </text>
             </div> 
 
@@ -66,6 +76,112 @@
 
         </div>
 
+    </section>
+
+    <section class="row home-bg-4" id="team">
+
+        <div class="tagline offset">
+            <span>
+                Meet the Founding Team
+            </span>
+        </div>
+
+        <div class="col-md-2">
+            <div class="team-member">
+            <figure>
+                <img src="static/images/team/meryll.png" alt="" class="img-responsive">
+                <figcaption>
+                    <h4>Meryll Dindin</h4>
+                    <ul>
+                        <li><a href="https://twitter.com/DindinMeryll"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/dindin-meryll"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="https://medium.com/@merylldin"><i class="fa fa-medium"></i></a></li>
+                        <li><a href="https://github.com/Coricos"><i class="fa fa-github"></i></a></li>
+                    </ul>
+                </figcaption>
+            </figure>
+            </div>
+        </div>
+
+        <div class="col-md-2">
+            <div class="team-member">
+            <figure>
+                <img src="static/images/team/oskar.jpg" alt="" class="img-responsive">
+                <figcaption>
+                    <h4>Oskar Radermecker</h4>
+                    <ul>
+                        <li><a href="https://github.com/oskaradermecker"><i class="fa fa-github"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/oradermecker"><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+                </figcaption>
+            </figure>
+            </div>
+        </div>
+
+        <div class="col-md-2">
+            <div class="team-member">
+            <figure>
+                <img src="static/images/team/florian.jpg" alt="" class="img-responsive">
+                <figcaption>
+                    <h4>Florian Fesch</h4>
+                    <ul>
+                        <li><a href="https://github.com/florianfesch"><i class="fa fa-github"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/florianfesch"><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+                </figcaption>
+            </figure>
+            </div>
+        </div>
+
+        <div class="col-md-2">
+            <div class="team-member">
+            <figure>
+                <img src="static/images/team/thomas.jpg" alt="" class="img-responsive">
+                <figcaption>
+                    <h4>Thomas Galeon</h4>
+                    <ul>
+                        <li><a href="https://github.com/TheGaga"><i class="fa fa-github"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/thomas-galeon"><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+                </figcaption>
+            </figure>
+            </div>
+        </div>
+
+        <div class="col-md-2">
+            <div class="team-member">
+            <figure>
+                <img src="static/images/team/pierre-louis.jpg" alt="" class="img-responsive">
+                <figcaption>
+                    <h4>Pierre-Louis Missler</h4>
+                    <ul>
+                        <li><a href="https://github.com/pierrelouismissler"><i class="fa fa-github"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/pierrelouismissler"><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+                </figcaption>
+            </figure>
+            </div>
+        </div>
+
+        <div class="tagline">
+            <span>
+                Meet our Mentors
+            </span>
+        </div>
+
+        <div class="col-md-2">
+            <div class="team-member">
+            <figure>
+                <img src="static/images/team/spencer.jpeg" alt="" class="img-responsive">
+                <figcaption>
+                    <h4>Spencer Krum</h4>
+                    <ul>
+                        <li><a href="https://www.linkedin.com/in/nibalizer"><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+                </figcaption>
+            </figure>
+            </div>
+        </div>
 
     </section>
 
