--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,6 +7,7 @@
         <a href="https://www.facebook.com/meryll.dindin"><i class="fa fa-facebook"></i></a>
         <a href="https://www.linkedin.com/in/dindin-meryll"><i class="fa fa-linkedin"></i></a>
         <a href="https://medium.com/@merylldin"><i class="fa fa-medium"></i></a>
+        <a href="https://github.com/Project-AsTeR"><i class="fa fa-github"></i></a>
     </div>
 
     <!-- Defines the top right side hamburger menu -->
@@ -20,7 +21,6 @@
         <nav class="menu">
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/team">Team</a></li>
                 <li><a href="/press">Press</a></li>
                 <li><a href="/contribute">Contribute</a></li>
                 <li><a href="/pricing">Pricing</a></li>
