--- a/templates/home.html
+++ b/templates/home.html
@@ -48,13 +48,13 @@
             </span>
         </div>
 
-        <div class="container">
+        <div class="container align-center">
 
-            <div class="col-5 video-wrapper">
+            <div class="video-wrapper">
                 <iframe src="https://www.youtube.com/embed/_SBBrj9y26M" frameborder="0" allowfullscreen></iframe>
             </div>
 
-            <div class="col-5 description">
+            <div class="description">
                 <text>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
                 </text>
@@ -62,15 +62,15 @@
 
         </div>  
 
-        <div class="container">
+        <div class="container align-center">
 
-            <div class="col-5 description">
+            <div class="description">
                 <text>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
                 </text>
             </div> 
 
-            <div class="col-5 video-wrapper">
+            <div class="video-wrapper">
                 <iframe src="https://www.youtube.com/embed/fLeLd2vp-8g" frameborder="0" allowfullscreen></iframe>
             </div>
 
@@ -181,6 +181,16 @@
                 </figcaption>
             </figure>
             </div>
+        </div>
+
+    </section>
+
+    <section class="row home-bg-5" id="contact">
+
+        <div class="tagline offset">
+            <span>
+                We are more than a Concept, we are an Applicable Solution
+            </span>
         </div>
 
     </section>
