--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -23,7 +23,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/press">Press</a></li>
                 <li><a href="/contribute">Contribute</a></li>
-                <li><a href="/pricing">Pricing</a></li>
+                <li><a href="/demo">Demo</a></li>
             </ul>
         </nav>
 
