--- a/templates/home.html
+++ b/templates/home.html
@@ -54,7 +54,7 @@
                 <iframe src="https://www.youtube.com/embed/_SBBrj9y26M" frameborder="0" allowfullscreen></iframe>
             </div>
 
-            <div class="description">
+            <div class="description m-l-20 v-a-b" style="margin-bottom: 7px;">
                 <text>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
                 </text>
@@ -62,9 +62,9 @@
 
         </div>  
 
-        <div class="container align-center">
+        <div class="container align-center p-b-50">
 
-            <div class="description">
+            <div class="description m-r-20 v-a-t">
                 <text>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
                 </text>
