--- a/templates/home.html
+++ b/templates/home.html
@@ -54,7 +54,7 @@
                 <iframe src="https://www.youtube.com/embed/_SBBrj9y26M" frameborder="0" allowfullscreen></iframe>
             </div>
 
-            <div class="description m-l-20 v-a-b" style="margin-bottom: 7px;">
+            <div class="description m-l-20 v-a-b" style="margin-bottom: 6px;">
                 <text>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
                 </text>
@@ -62,7 +62,7 @@
 
         </div>  
 
-        <div class="container align-center p-b-50">
+        <div class="container align-center p-b-70">
 
             <div class="description m-r-20 v-a-t">
                 <text>
@@ -191,6 +191,50 @@
             <span>
                 We are more than a Concept, we are an Applicable Solution
             </span>
+        </div>
+
+        <div class="line-bottom"></div>
+
+        <div class="container align-center logo">
+
+            <div class="col-md-1">
+                <a href="/">
+                    <img src="static/images/partners/linux-foundation.png"/>
+                </a>
+            </div>
+
+            <div class="col-md-1">
+                <a href="/">
+                    <img src="static/images/partners/ibm-logo.svg"/>
+                </a>
+            </div>
+
+            <div class="col-md-1">
+                <a href="/">
+                    <img src="static/images/partners/american-red-cross.png"/>
+                </a>
+            </div>
+
+        </div>
+
+        <div class="line-top"></div>
+
+        <div class="container align-center contact p-b-50">
+
+            <div class="col-md-3 col-centered">
+                <i class="fa fa-map-marker" aria-hidden="true"></i>
+                <p>San Francisco, CA, USA</p>
+            </div>
+
+            <div class="col-md-3 col-centered">
+                <a class="button-contact bouncy" href="#pop-contact">Contact Us</a>
+            </div>
+                        
+            <div class="col-md-3 col-centered">
+                <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                <p>aster.messages@gmail.com</p>
+            </div>
+
         </div>
 
     </section>
