Build contact popup

--- a/static/aster-theme.css
+++ b/static/aster-theme.css
@@ -337,6 +337,7 @@ section {
 }
 
 .contact div {
+    overflow: hidden;
     text-align: center;
     vertical-align: middle;
     display: inline-block;
@@ -350,11 +351,12 @@ section {
 }
 
 .button-contact{
-    display:inline-block;
-    padding:0.35em 1.2em;
-    border:0.1em solid #FFFFFF;
-    margin:0 0.3em 0.3em 0;
-    border-radius:0.12em;
+    max-height: 40px;
+    display: inline-block;
+    padding: 0.35em 1.2em;
+    border: 0.1em solid #FFFFFF;
+    margin: 0 0.3em 0.3em 0;
+    border-radius: 0.12em;
     box-sizing: border-box;
     text-decoration: none;
     font-weight: 300;
@@ -366,19 +368,4 @@ section {
 .button-contact:hover{
     color: #000000;
     background-color: #FFFFFF;
-}
-
-.bouncy{
-    animation:bouncy 5s infinite linear;
-    position:relative;
-}
-
-@keyframes bouncy {
-    0%{top:0em} 
-    40%{top:0em}
-    43%{top:-0.9em}
-    46%{top:0em}
-    48%{top:-0.4em}
-    50%{top:0em}
-    100%{top:0em;}
 }
