--- a/templates/home.html
+++ b/templates/home.html
@@ -227,12 +227,61 @@
             </div>
 
             <div class="col-md-3 col-centered">
-                <a class="button-contact bouncy" href="#pop-contact">Contact Us</a>
+                <a class="button-contact" href="#pop-contact">Contact Us</a>
             </div>
                         
             <div class="col-md-3 col-centered">
                 <i class="fa fa-envelope-o" aria-hidden="true"></i>
                 <p>aster.messages@gmail.com</p>
+            </div>
+
+            <div id="pop-contact" class="overlay">
+                <div class="popup">
+                    <a class="close" href="#contact">&times;</a>
+                    <div class="content">
+                        <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column text-center" align="justify">
+                            <h1 class="cover-heading text-center" style="margin-bottom: 20px;">Contact Us</h1>
+
+                            {% for message in form.name.errors %}
+                                <div class="flash">{{ message }}</div>
+                            {% endfor %}
+                            {% for message in form.email.errors %}
+                                <div class="flash">{{ message }}</div>
+                            {% endfor %}
+                            {% for message in form.subject.errors %}
+                                <div class="flash">{{ message }}</div>
+                            {% endfor %}
+                            {% for message in form.message.errors %}
+                                <div class="flash">{{ message }}</div>
+                            {% endfor %}
+
+                            <div class="container">
+
+                                <div class="col-md-10 col-centered">
+                                    <form action="{{ url_for('home_page') }}" method=post name="contact" role="form">
+                                        <div class="ml-form mb-3 fit-input">
+                                            {{ form.name(class="form-control", placeholder="Your name", **{'data-validation':'required'}) }}
+                                        </div>
+                                        <div class="md-form mb-3 fit-input">
+                                            {{ form.email(class="form-control", placeholder="Your email address", **{'data-validation':'required'}) }}
+                                        </div>
+                                        <div class="md-form mb-3 fit-input">
+                                            {{ form.subject(class="form-control", placeholder="Subject ", **{'data-validation':'required'}) }}
+                                        </div>
+                                        <div class="md-form mb-3 fit-input">
+                                            {{ form.message(class="form-control", placeholder="Write your message here! Surprise us!", **{'data-validation':'required'}) }}
+                                        </div>
+                                        <div class="fit-input send-contact">
+                                            {{ form.submit(class='btn', value="SEND") }}
+                                        </div>
+                                    </form>
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
             </div>
 
         </div>
