--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" type="text/css" href="static/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="static/aster-theme.css">
     <link rel="stylesheet" type="text/css" href="static/aster-navbar.css">
+    <link rel="stylesheet" type="text/css" href="static/aster-contact.css">
 
     <!-- Download fonts-->
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
