--- a/templates/home.html
+++ b/templates/home.html
@@ -198,20 +198,26 @@
         <div class="container align-center logo">
 
             <div class="col-md-1">
-                <a href="/">
+                <a href="https://www.linuxfoundation.org/">
                     <img src="static/images/partners/linux-foundation.png"/>
                 </a>
             </div>
 
             <div class="col-md-1">
-                <a href="/">
+                <a href="https://www.ibm.com/us-en/?ar=1">
                     <img src="static/images/partners/ibm-logo.svg"/>
                 </a>
             </div>
 
             <div class="col-md-1">
-                <a href="/">
+                <a href="https://www.redcross.org">
                     <img src="static/images/partners/american-red-cross.png"/>
+                </a>
+            </div>
+
+            <div class="col-md-1">
+                <a href="https://callforcode.org">
+                    <img src="static/images/partners/call-for-code.png"/>
                 </a>
             </div>
 
