--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -18,9 +18,9 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/press">Press</a></li>
-                <li><a href="/contribute">Contribute</a></li>
-                <li><a href="/demo">Demo</a></li>
-            </ul>
+                <!-- <li><a href="/contribute">Contribute</a></li>  -->
+                <!-- <li><a href="/demo">Demo</a></li>  -->
+            </ul> 
         </nav>
 
     </div>
