--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 
 <body onload="document.body.style.opacity='1'">
 
-    <title>Aster | Home</title>
+    <title>AsTeR | Home</title>
 
     <section class="row home-bg-1" id="home">
 
@@ -34,9 +34,35 @@
 
         <div class="tagline offset">
             <span>
-                Using State-of-the-Art Technology to Tackle real Issues when a Natural Disaster Occurs
+                Using SOTA Technology to manage Time-pressing Issues when a Natural Disaster Occurs
             </span>
         </div>
+
+        <div class="image-wrapper col-4">
+            <img src="static/images/screen-map.png"/>
+        </div>
+
+        <div class="col-6">
+
+            <div class="text-feature m-l-20">
+                <text>
+                    <strong>Call Analysis: </strong> 911 emergency calls are caught in real time by converting the audio stream into exploitable text, then analyzed with state-of-the-art NLP algorithms. Key relevant information is extracted, and the urgency of the situation is evaluated for an accurate intervention.
+                </text>
+            </div>
+
+            <div class="text-feature m-l-20">
+                <text>
+                    <strong>Unit Dispatching: </strong> Using graph optimization algorithms, available emergency units are dispatched in the most efficient way possible based on the need and urgency extracted from calls. Time to intervention is key, and the way first responders are dispatched makes a life-saving difference.
+                </text>
+            </div> 
+
+            <div class="text-feature m-l-20">
+                <text>
+                    <strong>Smart Feedback: </strong> AsTeR is more than an AI-powered API, it is also a platform on which dispatchers have an intuitive overview of all the communications. Relying on centralized data, it becomes easy for emergency centers and units to share information, for an optimal help from anyone when the time comes.
+                </text>
+            </div> 
+
+        </div> 
 
     </section>
 
@@ -56,7 +82,7 @@
 
             <div class="description m-l-20 v-a-b" style="margin-bottom: 6px;">
                 <text>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                     Whenever a natural disaster hits, everyone affected or panicking will tend to call 911 for support. Some of those calls have a higher priority than others, but the current responders are not able to know it before taking the call. <strong>AsTeR has been designed to answer this problem.</strong> Built as a modular platform, powered by an AI-enabled API, AsTeR catches incoming audio streams from saturated centers to extract key information and prioritize those calls before the responders answer those.
                 </text>
             </div> 
 
@@ -66,7 +92,7 @@
 
             <div class="description m-r-20 v-a-t">
                 <text>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                    This project was founded in Berkeley, California, as part of the <a href="https://callforcode.org/">Call for Code 2019</a>. Here, earthquakes and wildfires are more common than in other places in the US. Emergency centers are overwhelmed every time such event occurs. By switching to an automatic mode, people needing help still have the opportunity to expose their emergency, before being redirected to a responder that ended his previous call.
                 </text>
             </div> 
 
@@ -98,6 +124,11 @@
                         <li><a href="https://medium.com/@merylldin"><i class="fa fa-medium"></i></a></li>
                         <li><a href="https://github.com/Coricos"><i class="fa fa-github"></i></a></li>
                     </ul>
+                    <ul>
+                        <li><a href="https://www.thrive-education.co">
+                            <img src="static/images/companies/thrive-education-logo.png" alt="" class="img-responsive">
+                        </a></li>
+                    </ul>
                 </figcaption>
             </figure>
             </div>
@@ -112,6 +143,11 @@
                     <ul>
                         <li><a href="https://github.com/oskaradermecker"><i class="fa fa-github"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/oradermecker"><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+                    <ul>
+                        <li><a href="https://www.thrive-education.co">
+                            <img src="static/images/companies/varian-logo.png" alt="" class="img-responsive">
+                        </a></li>
                     </ul>
                 </figcaption>
             </figure>
@@ -128,6 +164,11 @@
                         <li><a href="https://github.com/florianfesch"><i class="fa fa-github"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/florianfesch"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
+                    <ul>
+                        <li><a href="https://www.thrive-education.co">
+                            <img src="static/images/companies/itrenew-logo.png" alt="" class="img-responsive">
+                        </a></li>
+                    </ul>
                 </figcaption>
             </figure>
             </div>
@@ -143,6 +184,11 @@
                         <li><a href="https://github.com/TheGaga"><i class="fa fa-github"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/thomas-galeon"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
+                    <ul>
+                        <li><a href="https://www.thrive-education.co">
+                            <img src="static/images/companies/verily-logo.png" alt="" class="img-responsive">
+                        </a></li>
+                    </ul>
                 </figcaption>
             </figure>
             </div>
@@ -157,6 +203,11 @@
                     <ul>
                         <li><a href="https://github.com/pierrelouismissler"><i class="fa fa-github"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/pierrelouismissler"><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+                    <ul>
+                        <li><a href="https://www.thrive-education.co">
+                            <img src="static/images/companies/ey-logo.png" alt="" class="img-responsive">
+                        </a></li>
                     </ul>
                 </figcaption>
             </figure>
@@ -177,6 +228,11 @@
                     <h4>Spencer Krum</h4>
                     <ul>
                         <li><a href="https://www.linkedin.com/in/nibalizer"><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+                    <ul>
+                        <li><a href="https://www.thrive-education.co">
+                            <img src="static/images/companies/ibm-logo.svg" alt="" class="img-responsive">
+                        </a></li>
                     </ul>
                 </figcaption>
             </figure>
@@ -204,6 +260,12 @@
             </div>
 
             <div class="col-md-1">
+                <a href="https://callforcode.org">
+                    <img src="static/images/partners/call-for-code.png"/>
+                </a>
+            </div>
+
+            <div class="col-md-1">
                 <a href="https://www.ibm.com/us-en/?ar=1">
                     <img src="static/images/partners/ibm-logo.svg"/>
                 </a>
@@ -212,12 +274,6 @@
             <div class="col-md-1">
                 <a href="https://www.redcross.org">
                     <img src="static/images/partners/american-red-cross.png"/>
-                </a>
-            </div>
-
-            <div class="col-md-1">
-                <a href="https://callforcode.org">
-                    <img src="static/images/partners/call-for-code.png"/>
                 </a>
             </div>
 
