Open new tab when link clicking

--- a/templates/home.html
+++ b/templates/home.html
@@ -119,13 +119,13 @@
                 <figcaption>
                     <h4>Meryll Dindin</h4>
                     <ul>
-                        <li><a href="https://twitter.com/DindinMeryll"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="https://www.linkedin.com/in/dindin-meryll"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="https://medium.com/@merylldin"><i class="fa fa-medium"></i></a></li>
-                        <li><a href="https://github.com/Coricos"><i class="fa fa-github"></i></a></li>
+                        <li><a href="https://twitter.com/DindinMeryll" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/dindin-meryll" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="https://medium.com/@merylldin" target="_blank"><i class="fa fa-medium"></i></a></li>
+                        <li><a href="https://github.com/Coricos" target="_blank"><i class="fa fa-github"></i></a></li>
                     </ul>
                     <ul>
-                        <li><a href="https://www.thrive-education.co">
+                        <li><a href="https://www.thrive-education.co" target="_blank">
                             <img src="static/images/companies/thrive-education-logo.png" alt="" class="img-responsive">
                         </a></li>
                     </ul>
@@ -141,11 +141,11 @@
                 <figcaption>
                     <h4>Oskar Radermecker</h4>
                     <ul>
-                        <li><a href="https://github.com/oskaradermecker"><i class="fa fa-github"></i></a></li>
-                        <li><a href="https://www.linkedin.com/in/oradermecker"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="https://github.com/oskaradermecker" target="_blank"><i class="fa fa-github"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/oradermecker" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                     <ul>
-                        <li><a href="https://www.thrive-education.co">
+                        <li><a href="https://www.varian.com" target="_blank">
                             <img src="static/images/companies/varian-logo.png" alt="" class="img-responsive">
                         </a></li>
                     </ul>
@@ -161,11 +161,11 @@
                 <figcaption>
                     <h4>Florian Fesch</h4>
                     <ul>
-                        <li><a href="https://github.com/florianfesch"><i class="fa fa-github"></i></a></li>
-                        <li><a href="https://www.linkedin.com/in/florianfesch"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="https://github.com/florianfesch" target="_blank"><i class="fa fa-github"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/florianfesch" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                     <ul>
-                        <li><a href="https://www.thrive-education.co">
+                        <li><a href="https://www.itrenew.com" target="_blank">
                             <img src="static/images/companies/itrenew-logo.png" alt="" class="img-responsive">
                         </a></li>
                     </ul>
@@ -181,11 +181,11 @@
                 <figcaption>
                     <h4>Thomas Galeon</h4>
                     <ul>
-                        <li><a href="https://github.com/TheGaga"><i class="fa fa-github"></i></a></li>
-                        <li><a href="https://www.linkedin.com/in/thomas-galeon"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="https://github.com/TheGaga" target="_blank"><i class="fa fa-github"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/thomas-galeon" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                     <ul>
-                        <li><a href="https://www.thrive-education.co">
+                        <li><a href="https://verily.com" target="_blank">
                             <img src="static/images/companies/verily-logo.png" alt="" class="img-responsive">
                         </a></li>
                     </ul>
@@ -201,11 +201,11 @@
                 <figcaption>
                     <h4>Pierre-Louis Missler</h4>
                     <ul>
-                        <li><a href="https://github.com/pierrelouismissler"><i class="fa fa-github"></i></a></li>
-                        <li><a href="https://www.linkedin.com/in/pierrelouismissler"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="https://github.com/pierrelouismissler" target="_blank"><i class="fa fa-github"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/pierrelouismissler" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                     <ul>
-                        <li><a href="https://www.thrive-education.co">
+                        <li><a href="https://www.ey.com/en_gl" target="_blank">
                             <img src="static/images/companies/ey-logo.png" alt="" class="img-responsive">
                         </a></li>
                     </ul>
@@ -227,10 +227,10 @@
                 <figcaption>
                     <h4>Spencer Krum</h4>
                     <ul>
-                        <li><a href="https://www.linkedin.com/in/nibalizer"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/nibalizer" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                     <ul>
-                        <li><a href="https://www.thrive-education.co">
+                        <li><a href="https://www.ibm.com/us-en/" target="_blank">
                             <img src="static/images/companies/ibm-logo.svg" alt="" class="img-responsive">
                         </a></li>
                     </ul>
@@ -254,25 +254,25 @@
         <div class="container align-center logo">
 
             <div class="col-md-1">
-                <a href="https://www.linuxfoundation.org/">
+                <a href="https://www.linuxfoundation.org/" target="_blank">
                     <img src="static/images/partners/linux-foundation.png"/>
                 </a>
             </div>
 
             <div class="col-md-1">
-                <a href="https://callforcode.org">
+                <a href="https://callforcode.org" target="_blank">
                     <img src="static/images/partners/call-for-code.png"/>
                 </a>
             </div>
 
             <div class="col-md-1">
-                <a href="https://www.ibm.com/us-en/?ar=1">
+                <a href="https://www.ibm.com/us-en/?ar=1" target="_blank">
                     <img src="static/images/partners/ibm-logo.svg"/>
                 </a>
             </div>
 
             <div class="col-md-1">
-                <a href="https://www.redcross.org">
+                <a href="https://www.redcross.org" target="_blank">
                     <img src="static/images/partners/american-red-cross.png"/>
                 </a>
             </div>
