--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,7 +3,7 @@
     <!-- Social media redirection -->
     <div class="social-links">
         <a class="navbar-brand" href="/"><img src="static/images/logo-aster.png" width="30" height="30" class="d-inline-block align-center" alt="Logo Aster"> AsTeR</a>
-        <a href="https://github.com/Project-AsTeR"><i class="fa fa-github"></i></a>
+        <a href="https://github.com/Project-AsTeR" target="_blank"><i class="fa fa-github"></i></a>
     </div>
 
     <!-- Defines the top right side hamburger menu -->
